# PyBaSiC

./: CITATION.cff  README.md  basic_shading_correction.py  environment.yml  pyproject.toml  setup.py
pybasic/: shading_correction.py
scripts/: basic_shading_correction.py
